--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,79 +3,93 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="false">
 
-    <include layout="@layout/include_toolbar" />
-
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:background="#fce4ec">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <include layout="@layout/include_toolbar" />
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:background="@color/activity_main_background">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp">
+                android:orientation="vertical">
 
-                <Spinner
-                    android:id="@+id/left_spinner"
-                    android:layout_width="150dp"
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:entries="@array/langs"></Spinner>
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp">
+
+                    <Spinner
+                        android:id="@+id/left_spinner"
+                        android:layout_width="@dimen/activity_main_spinner_width"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginTop="5dp"
+                        android:entries="@array/langs"
+                        android:textAlignment="center" />
+
+                    <Button
+                        android:id="@+id/direction_swap_button"
+                        android:layout_width="@dimen/activity_main_swap_button_size"
+                        android:layout_height="@dimen/activity_main_swap_button_size"
+                        android:layout_centerInParent="true"
+                        android:background="@drawable/icon_swap_white_96px" />
+
+
+                    <Spinner
+                        android:id="@+id/right_spinner"
+                        android:layout_width="@dimen/activity_main_spinner_width"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="5dp"
+                        android:entries="@array/langs"
+                        android:textAlignment="center" />
+                </RelativeLayout>
+
+                <EditText
+                    android:id="@+id/to_translate"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/activity_main_edit_height"
+                    android:layout_margin="10dp"
+                    android:background="@color/activity_main_edit"
+                    android:hint="@string/activity_main_hint"
+                    android:textAlignment="center"
+                    android:textSize="42sp" />
 
                 <Button
-                    android:id="@+id/direction_swap_button"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/icon_swap_96px" />
+                    android:id="@+id/translate_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/activity_main_translate_button_height"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@color/activity_main_button"
+                    android:text="@string/activity_main_translate" />
 
-
-                <Spinner
-                    android:id="@+id/right_spinner"
-                    android:layout_width="150dp"
+                <!-- TODO придумать чет с этим рецайклом, целиком он сейчас не нужен-->
+                <!-- Потому что планировалась обработка нескольких слов одновременно и они должны били отображаться списком -->
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_view"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:entries="@array/langs"></Spinner>
-            </RelativeLayout>
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp" />
 
-            <EditText
-                android:id="@+id/to_translate"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_margin="10dp"
-                android:background="#ffcdd2"
-                android:hint="Введите слово или фразу"
-                android:textAlignment="center"
-                android:textSize="42sp" />
-
-            <Button
-                android:id="@+id/translate_button"
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:text="Перевести" />
-
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            </android.support.v7.widget.RecyclerView>e
-        </LinearLayout>
-    </ScrollView>
+            </LinearLayout>
+        </ScrollView>
+    </RelativeLayout>
 
     <include layout="@layout/include_navview_start" />
 
