--- a/app/src/main/res/layout/view_nav_header.xml
+++ b/app/src/main/res/layout/view_nav_header.xml
@@ -14,20 +14,20 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <!-- Вот тут нужно будет дописать текст для заголовка -->
         <TextView
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
-            android:textSize="24sp"
-            android:textStyle="bold"
+            android:layout_gravity="center"
             android:layout_marginLeft="20dp"
-            android:shadowRadius="1"
+            android:layout_marginStart="20dp"
+            android:shadowColor="@color/navigation_start_header_text_shadow"
             android:shadowDx="1"
             android:shadowDy="1"
-            android:shadowColor="#000"
-            android:text="Magenta Translator" />
+            android:shadowRadius="1"
+            android:text="@string/app_name"
+            android:textColor="@color/navigation_start_header_text"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 </RelativeLayout>
