--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,8 +2,12 @@
 <resources>
     <dimen name="item_recent_height">42dp</dimen>
     <dimen name="item_main_height">60dp</dimen>
+
     <dimen name="activity_main_spinner_width">150dp</dimen>
     <dimen name="activity_main_swap_button_size">35dp</dimen>
     <dimen name="activity_main_edit_height">150dp</dimen>
     <dimen name="activity_main_translate_button_height">70dp</dimen>
+
+    <dimen name="item_main_swipe_icon_size">28dp</dimen>
+    <dimen name="item_main_swipe_icon_margin">12dp</dimen>
 </resources>
